fixed display overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   box-sizing: border-box;
   scrollbar-width: none;
   scrollbar-color: transparent transparent;
+  overflow-x: hidden;
 }
 
 a {
